--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,12 @@ java {
 dependencies {
     implementation("io.micronaut:micronaut-jackson-databind")
     runtimeOnly("ch.qos.logback:logback-classic")
+
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.11.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.11.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-params:5.11.0')
+    testImplementation("com.approvaltests:approvaltests:24.5.0")
+    testImplementation('org.assertj:assertj-core:3.26.3')
 }
 
 graalvmNative.toolchainDetection = false
