--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ java {
 
 dependencies {
     implementation("io.micronaut:micronaut-jackson-databind")
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
     runtimeOnly("ch.qos.logback:logback-classic")
 
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.11.0')
